name:                solga
version:             0.1.0.0
synopsis:            Simple typesafe web routing
-- description:
license:             MIT
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
copyright:           Copyright (C) 2016 Patrick Chilton
category:            Web
build-type:          Simple
homepage:            https://github.com/chpatrick/solga
bug-reports:         https://github.com/chpatrick/solga/issues
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Solga
  build-depends:       base,
                       text,
                       wai,
                       bytestring,
                       containers,
                       aeson,
                       wai-extra,
                       http-types,
                       resourcet
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
