name:                solga-client-ghcjs
version:             0.1.0.0
synopsis:            Simple typesafe web routing
description:         A library for easily making requests to solga endpoints
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Copyright (C) 2017 Francesco Mazzoli
category:            Web
build-type:          Simple
homepage:            https://github.com/chpatrick/solga
bug-reports:         https://github.com/chpatrick/solga/issues
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Solga.Client.GHCJS
  build-depends:       base >= 4.8 && < 5,
                       solga-core,
                       dlist,
                       ghcjs-dom,
                       safe-exceptions,
                       transformers
  if !impl(ghcjs)
    build-depends:
      aeson,
      http-types,
      text,
      bytestring,
      jsaddle,
      jsaddle-dom,
      exceptions,
      binary
  else
    build-depends:
      ghcjs-base,
      jsval-json,
      ghcjs-dom-jsffi
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
