name:                solga-core
version:             0.1.0.0
synopsis:            Simple typesafe web routing
description:         A library for easily specifying web APIs and implementing them in a type-safe way.
license:             MIT
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
copyright:           Copyright (C) 2016 Patrick Chilton
category:            Web
build-type:          Simple
homepage:            https://github.com/chpatrick/solga
bug-reports:         https://github.com/chpatrick/solga/issues
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Solga.Core
  build-depends:       base >= 4.8 && < 5,
                       case-insensitive,
                       bytestring,
                       text
  if impl(ghcjs)
    build-depends:
      ghcjs-base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

