name:                solga-swagger
version:             0.1.0.2
synopsis:            Swagger generation for Solga
description:         Swagger generation for Solga
license:             MIT
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
copyright:           Copyright (C) 2016 Patrick Chilton
category:            Web
build-type:          Simple
homepage:            https://github.com/chpatrick/solga
bug-reports:         https://github.com/chpatrick/solga/issues
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Solga.Swagger
  build-depends:       base >= 4.8 && < 5,
                       solga,
                       swagger2 >= 2.1,
                       lens,
                       text,
                       unordered-containers,
                       mtl,
                       http-types,
                       bytestring,
                       dlist,
                       insert-ordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
