name:                solga-typescript
version:             0.1.0.0
synopsis:            TypeScript types generation for Solga
description:         TypeScript types generation for Solga
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Copyright (C) 2019 Francesco Mazzoli
category:            Web
build-type:          Simple
homepage:            https://github.com/chpatrick/solga
bug-reports:         https://github.com/chpatrick/solga/issues
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Solga.TypeScript
  build-depends:       base >= 4.8 && < 5,
                       solga-core,
                       aeson-typescript,
                       aeson,
                       text,
                       unordered-containers,
                       containers,
                       dlist,
                       case-insensitive
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
